--- a/style.css
+++ b/style.css
@@ -305,4 +305,10 @@ form .btn2{
     font-weight: 300;
     margin-top: 20px;
 }
+#msg{
+    color: #61b752;
+    margin-top: -40px;
+    display: block;
+
+}
 /* --------------------css for small screem-=-------- */
